--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aiofiles==23.2.1
 anyio==3.5.0
 asgiref==3.5.0
 click==8.0.3
@@ -6,7 +7,9 @@ h11==0.13.0
 idna==3.3
 Jinja2==3.0.3
 MarkupSafe==2.0.1
+psycopg2==2.9.9
 pydantic==1.9.0
+python-multipart==0.0.6
 sniffio==1.2.0
 starlette==0.17.1
 typing_extensions==4.0.1
