--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,24 @@
 aiofiles==23.2.1
 anyio==3.5.0
 asgiref==3.5.0
+cffi==1.16.0
 click==8.0.3
+cryptography==41.0.4
 fastapi==0.73.0
+greenlet==3.0.0
 h11==0.13.0
 idna==3.3
 Jinja2==3.0.3
 MarkupSafe==2.0.1
+mysql-connector-python==8.1.0
+protobuf==4.21.12
 psycopg2==2.9.9
+pycparser==2.21
 pydantic==1.9.0
+PyJWT==2.8.0
 python-multipart==0.0.6
 sniffio==1.2.0
+SQLAlchemy==2.0.22
 starlette==0.17.1
-typing_extensions==4.0.1
+typing_extensions==4.8.0
 uvicorn==0.17.0.post1
